# blasteroids

./: .gitignore  CMakeLists.txt  Makefile  blasteroids.c  collide.c  configure.sh  data.c  data.h  make_linux
